--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  hyrec-web:
+  web:
     container_name: ${APP_NAME:-chatbot-sumedang-larang}
     build: .
     environment:
